# DNA-analyzer

./: DNA.rawdna  README.md
Controller/: ICommand.cpp  ICommand.h
Controller/analysis/: len.cpp  len.h
Controller/creation/: dup.cpp  dup.h  load.cpp  load.h  new.cpp  new.h
Docs/: class diagram - DNA.docx
Model/: DNACollection.cpp  DNACollection.h  DNA_sequence.cpp  DNA_sequence.h  MetaData.cpp  MetaData.h
Src/: CMakeLists.txt  Icommand.h  Makefile  a.out  app.cpp  app.h  dna.h  dna_sequence.cpp  factoryCommand.cpp  factory_command.h  file.txt  input_data.cpp  input_data.h  main.cpp  meta_data.cpp  meta_data.h  new_command.cpp  new_command.h  output_data.cpp  output_data.h  parsing.cpp  parsing.h  terminal.cpp  terminal.h
Src/Command/: Icommand.h  factoryCommand.cpp  factory_command.h  new_command.cpp  new_command.h
Src/Command/Load/: load_command.cpp  load_command.h  load_parser.cpp  load_parser.h
Src/Command/New/: new_command.cpp  new_command.h  new_parser.cpp  new_parser.h  save_command.cpp
Src/Command/Save/: save_command.cpp  save_command.h  save_parser.cpp  save_parser.h
Src/Data/: dna.h  dna_sequence.cpp  meta_data.cpp  meta_data.h
Src/I_O/: input_data.cpp  input_data.h  output_data.cpp  output_data.h
View/: Args.cpp  Args.h  DNA_app.cpp  DNA_app.h  command_factory.cpp  command_factory.h  terminal.cpp  terminal.h
